- updated trip merging to ignore duplicates - add first and last places if they start before the current day but end on it.